# arukai-capital-call

./: .gitignore  CLIENT_VALIDATION_REPORT.md  README.md  compose.yaml  model_scorecard_results.json
.squad/: ARU-16-incident-report.md  evidence-pack-d1-vs-d2-updated.md  holden-red-team-d2.md  v01-scope.md  (+2 more)
backend/: .env.example  Dockerfile  conftest.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_v02_state_machine.py  0002_add_sessions_refresh_columns.py  0003_audit_hash_chain.py
backend/app/: audit_chain.py  audit_guard.py  auth.py  classify.py  db.py  local_llm.py  main.py  metrics.py  models.py  sanitizers.py  schemas.py  security.py  state_machine.py  windmill_client.py  workflow.py
backend/app/routers/: approvals.py  audit.py  auth.py  packages.py
backend/scripts/: backup.py  create_v01_test_db.py  rotate_key.py  seed.py
backend/tests/: conftest.py  test_api_contract.py  test_approvals.py  test_attest.py  test_audit_append_only.py  test_audit_global.py  test_audit_hash_chain.py  test_auth.py  test_claim.py  test_classify.py  test_classify_fallback.py  test_classify_per_field.py  test_concurrency.py  test_contract_check_script.py  test_deploy_workflow_contract.py  test_documents.py  test_encryption.py  test_extraction_ordinal_dates.py  test_flag_field.py  test_health.py  test_input_sanitization.py  test_kms.py  test_migration_mapping.py  test_oidc.py  test_por146_regression.py  test_review_notes.py  test_sanitizers.py  test_state_machine.py  test_windmill_integration.py
backend/windmill_flows/: capital_call_approval.json
(+142 files in other folders)
